--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ body {
     color: black;
     text-align: center;
     line-height: 1.5;
+    display: flex;
+    flex-direction: column;
 }
 
 .bio {
@@ -39,10 +41,6 @@ nav, footer {
       padding-top: -16%;
   }
 
-  @media only screen 
-  and (min-device-width: 320px) 
-  and (max-device-width: 1600px) 
-  and (-webkit-min-device-pixel-ratio: 1) {
 
 }
 
