--- a/style.css
+++ b/style.css
@@ -10,38 +10,92 @@ body {
     line-height: 1.5;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
 }
 
 .bio {
-    background-color: rgb(71, 76, 80);
+    background-color: rgb(54, 81, 100);
     padding-top: 8%;
-    margin-top: -12%;
+    margin-top: -14%;
     justify-content: center;
     text
 
 }
 
-.projects {
-    background-color: rgb(51, 49, 49);
-    padding-bottom: 20%;
+.linkedin {
+    margin-top: -16%;
+    margin-bottom: 10%;
 }
 
-nav, footer {
-    background-color: rgb(48, 48, 58);
+.projects {
+    background-color: rgb(72, 87, 98);
+    padding-bottom: 20%;
+    padding-top: 20px;
+    margin-top: -9%;
+}
+
+#projects {
+    margin-top: -3% ;
+}
+
+nav {
+    margin-top: 2%;
+    background-color: lightslategray;
+}
+
+footer {
+    background-color: rgb(61, 61, 63);
+    margin-top: -5%;
 }
  header {
-     padding: 10%;
+     padding: 10px;
      margin-top: -10%;
+     margin-bottom: 10%;
+     background-color: rgb(49, 49, 92);
+ }
+
+ .Quiz {
+     margin-top: 2%;
+     
+     
  }
 
  h1 {
      background-color: grey;
+     padding: 50px;
+     font-size: 22px;
+ }
+
+ h2 {
+     margin-top: 8%;
+ }
+
+ p {
+     margin-top: -2%;
+     margin-bottom: 8%;
  }
   footer {
       padding-top: -16%;
   }
 
+  #img {
+    position: relative;
+    top:-20%;
+    width: 112px; 
+    height: 160px;
+    margin-top: -18%;
+   
+    }
 
-}
+    #QuizApp {
+        position: relative;
+        top:-50%;
+        width: 400px; 
+        height: 250px;
+        margin-top: -9%; 
+    }
+
+
+
 
 
